--- a/Frontend/src/app/MOHComponents/addmotherbabyjoineddata/addmotherbabyjoineddata.component.html
+++ b/Frontend/src/app/MOHComponents/addmotherbabyjoineddata/addmotherbabyjoineddata.component.html
@@ -18,7 +18,14 @@
                                           </div>
                                     </mat-form-field>
                             </div>
-                        
+                            <div class="col-md-3">
+                                <mat-form-field class="example-full-width">
+                                    <input matInput placeholder=" {{ 'motherBabyJoined.baby_id' | translate}} " type= "text" formControlName="baby_id">
+                                    <div *ngIf="submitted && addmotherbabyForm.controls.baby_id.errors" class="error">
+                                        <div *ngIf="addmotherbabyForm.controls.baby_id.errors.required">This field is required</div>
+                                      </div>
+                                </mat-form-field>
+                        </div>
                             <div class="col-md-3">
                                 <mat-form-field class="example-full-width">
                                     <input matInput placeholder="{{ 'motherBabyJoined.child_name' | translate }}" type= "text" formControlName="child_name">
