--- a/Frontend/src/app/Graphs/contraceptive-prevalance/contraceptive-prevalance.component.html
+++ b/Frontend/src/app/Graphs/contraceptive-prevalance/contraceptive-prevalance.component.html
@@ -1,9 +1,15 @@
 <div class="main-content">
   <div class="container-fluid">
+     
+    
       <div class="row">
           <div class="col-md-12">
+            
               <div class="card">
-                  
+                <div class="card-header">
+                    <h4 class="card-title "><h3>Contraceptive Methods</h3></h4>
+                    
+                </div>
                   <div class="card-body">
                       <div style="text-align:center">
                           
