Ui changed and added new baby button to motherbyId

--- a/Frontend/src/app/components/navbar/navbar.component.html
+++ b/Frontend/src/app/components/navbar/navbar.component.html
@@ -26,7 +26,7 @@
                 
               </mat-form-field>
               
-            
+            <!--
             <div *ngIf="Display()">
                 <form  #userForm="ngForm" (ngSubmit)="onSubmit()" class="navbar-form">
                     <div class="input-group no-border">
@@ -37,7 +37,7 @@
                         </button>
                     </div>
                 </form>
-            </div>
+            </div>-->
         
 
             <ul class="navbar-nav">
