--- a/Frontend/src/app/components/sidebar/sidebar.component.html
+++ b/Frontend/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="logo">
-    <a href="https://www.creative-tim.com" class="simple-text">
-        <div class="logo-img">
-            <img src="/assets/img/angular.png"/>
+    <a href="/dashboard" class="simple-text">
+        <div class="logo-img-rounded">
+            <img style="border-radius: 40px;" src="/assets/img/angular.png"/>
         </div>
         eMOH
     </a>
@@ -35,14 +35,14 @@
                 <p>
                     <span class="d-lg-none d-md-block">Some Actions</span>
                 </p>
-            </a>
+            </a><!--
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="#">Mike John responded to your email</a>
                 <a class="dropdown-item" href="#">You have 5 new tasks</a>
                 <a class="dropdown-item" href="#">You're now friend with Andrew</a>
                 <a class="dropdown-item" href="#">Another Notification</a>
                 <a class="dropdown-item" href="#">Another One</a>
-            </div>
+            </div>-->
         </li>
         <li class="nav-item">
             <a class="nav-link" href="javascript:void(0)">
