--- a/Frontend/src/app/MOHComponents/view-mother-by-id/view-mother-by-id.component.html
+++ b/Frontend/src/app/MOHComponents/view-mother-by-id/view-mother-by-id.component.html
@@ -2,7 +2,7 @@
 
 <div class="container-fluid">
   <div class="row">
-        <div class="col-md-8"></div>
+        <div class="col-md-6"></div>
         <div class="col-md-2-toggle">
             <mat-slide-toggle  [formControl]="autoRenew" (change)="onChange()">{{'edit'| translate}}</mat-slide-toggle>
         </div>
@@ -19,6 +19,10 @@
             </mat-select>
         </mat-form-field>
         </div>
+        
+        
+            <div class="col-md-3"> <button (click)="goToAddNewBaby()" class="btn btn-info btn-block">{{'motherBabyJoined.fill'| translate }}</button></div>
+       
         <div class="col-md-12">
       <div class="col-md-12">
           <div class="card">
