complete two graphs

--- a/Frontend/src/app/MOHComponents/add-approved-families/add-approved-families.component.html
+++ b/Frontend/src/app/MOHComponents/add-approved-families/add-approved-families.component.html
@@ -28,14 +28,14 @@
                                     </div>
                                 </mat-form-field>
                             </div>
-                            <div class="col-md-5">
+                            <!-- <div class="col-md-5">
                                 <mat-form-field class="example-full-width">
                                   <input matInput placeholder="{{ 'family.Approved_family_category' | translate }}" type= "text" formControlName="Approved_family_category">
                                   <div *ngIf="submitted && approvedFamilyForm.controls.Approved_family_category.errors" class="error">
                                       <div *ngIf="approvedFamilyForm.controls.Approved_family_category.errors.required">This field is required</div>
                                     </div>
                                 </mat-form-field>
-                            </div>
+                            </div> -->
                             <div class="col-md-3">
                                 <mat-form-field class="example-full-width">
                                   <input matInput placeholder="{{ 'family.Identity_number' | translate }}" type="text" formControlName="Identity_number">
@@ -74,9 +74,9 @@
                                 </mat-form-field>
                             </div><div class="col-md-5">
                                 <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="{{ 'family.Address' | translate }}" type= "text" formControlName="address">
-                                  <div *ngIf="submitted && approvedFamilyForm.controls.address.errors" class="error">
-                                      <div *ngIf="approvedFamilyForm.controls.address.errors.required">This field is required</div>
+                                  <input matInput placeholder="{{ 'family.Address' | translate }}" type= "text" formControlName="Address">
+                                  <div *ngIf="submitted && approvedFamilyForm.controls.Address.errors" class="error">
+                                      <div *ngIf="approvedFamilyForm.controls.Address.errors.required">This field is required</div>
                                     </div>
                                 </mat-form-field>
                             </div><div class="col-md-3">
