--- a/Frontend/src/app/MOHComponents/addmotherbabyjoineddata/addmotherbabyjoineddata.component.html
+++ b/Frontend/src/app/MOHComponents/addmotherbabyjoineddata/addmotherbabyjoineddata.component.html
@@ -102,9 +102,9 @@
                                 <div class="col-md-2">
                                         <mat-form-field class="example-full-width">
                                             <input matInput placeholder="{{ 'motherBabyJoined.registration_category' | translate }}" type= "text" formControlName="registration_category">
-                                            <div *ngIf="submitted && addmotherbabyForm.controls.registration_category.errors" class="error">
+                                            <!-- <div *ngIf="submitted && addmotherbabyForm.controls.registration_category.errors" class="error">
                                                 <div *ngIf="addmotherbabyForm.controls.registration_category.errors.required">This field is required</div>
-                                              </div>
+                                              </div> -->
                                         </mat-form-field>
                                 </div>
                         </div>
