--- a/Frontend/src/app/Graphs/family-report/family-report.component.html
+++ b/Frontend/src/app/Graphs/family-report/family-report.component.html
@@ -4,7 +4,7 @@
           <div class="col-md-12">
               <div class="card">
                 <div class="card-header">
-                    <h4 class="card-title "><h3>Registration Of Pregnant Mothers</h3></h4>
+                    <h4 class="card-title "><h3>Eligible Families</h3></h4>
                     
                 </div>
                   <div class="card-body">
