--- a/Frontend/src/app/Graphs/delivery-report/delivery-report.component.html
+++ b/Frontend/src/app/Graphs/delivery-report/delivery-report.component.html
@@ -3,7 +3,10 @@
       <div class="row">
           <div class="col-md-12">
               <div class="card">
-                  
+                <div class="card-header">
+                    <h4 class="card-title "><h3>Deliveries And Postpartum Visists</h3></h4>
+                    
+                </div>
                   <div class="card-body">
                       <div style="text-align:center">
                           
