--- a/Frontend/src/app/MOHComponents/add-mother/add-mother.component.html
+++ b/Frontend/src/app/MOHComponents/add-mother/add-mother.component.html
@@ -20,31 +20,44 @@
                             </mat-form-field>
                         </div>
                         <div class="col-md-3">
-                                <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Registration Number" type="text"formControlName="registration_no">
-                                    <div *ngIf="submit && addMotherSchema.controls.registration_no.errors" class="error">
-                                        <div *ngIf="addMotherSchema.controls.registration_no.errors.required">This field is required</div>
-                                    </div>
-                                </mat-form-field>
-                        </div>
-                        <div class="col-md-3">
-                                <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Registration Date" type="date" formControlName="registration_date">
-                                    <div *ngIf="submit && addMotherSchema.controls.registration_date.errors" class="error">
-                                        <div *ngIf="addMotherSchema.controls.registration_date.errors.required">This field is required</div>
-                                    </div>
-                                </mat-form-field>
-                        </div>
+                            <mat-form-field class="example-full-width">
+                                <input matInput placeholder="Mother's Name" type="text" formControlName="mothers_name" readonly>
+                                <div *ngIf="submit && addMotherSchema.controls.mothers_name.errors" class="error">
+                                    <div *ngIf="addMotherSchema.controls.mothers_name.errors.required">This field is required</div>
+                                </div>
+                            </mat-form-field>
                     </div>
+                       
+                        
+                    </div>
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>Personal Informations</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
                     <div class="row">
                         <div class="col-md-3">
-                                <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Mother's Name" type="text" formControlName="mothers_name" readonly>
-                                    <div *ngIf="submit && addMotherSchema.controls.mothers_name.errors" class="error">
-                                        <div *ngIf="addMotherSchema.controls.mothers_name.errors.required">This field is required</div>
-                                    </div>
-                                </mat-form-field>
-                        </div>
+                            <mat-form-field class="example-full-width">
+                                <input matInput placeholder="Registration Number" type="text"formControlName="registration_no">
+                                <div *ngIf="submit && addMotherSchema.controls.registration_no.errors" class="error">
+                                    <div *ngIf="addMotherSchema.controls.registration_no.errors.required">This field is required</div>
+                                </div>
+                            </mat-form-field>
+                    </div>
+                    <div class="col-md-3">
+                        <mat-form-field class="example-full-width">
+                            <input matInput placeholder="Registration Date" type="date" formControlName="registration_date">
+                            <div *ngIf="submit && addMotherSchema.controls.registration_date.errors" class="error">
+                                <div *ngIf="addMotherSchema.controls.registration_date.errors.required">This field is required</div>
+                            </div>
+                        </mat-form-field>
+                </div>
+            </div>
+            <div class="row">
                         <div class="col-md-5">
                                 <mat-form-field class="example-full-width">
                                     <input matInput placeholder="Address" type="text" formControlName="address" readonly>
@@ -91,6 +104,16 @@
                                 </mat-form-field>
                         </div>
                     </div>
+                    </mat-expansion-panel>
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>Vaccines</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
                     <div class="row">
                           <div class="col-md-3">
                           <div class="form-check">
@@ -123,6 +146,16 @@
                         
                         </div>
                     </div>
+                    </mat-expansion-panel>
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>Blood Tests</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
                     <label>Blood sugar</label>
                     <div class="row">
                         <div class="col-md-3">
@@ -157,7 +190,17 @@
                                 </mat-form-field>
                         </div>
                     </div>
-                    <label>VDRL Test</label>
+                    </mat-expansion-panel>
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>VDRL Test</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
+                   
                     <div class="row">
                         
                         <div class="col-md-3">
@@ -178,7 +221,17 @@
                                 </mat-form-field>
                         </div>
                     </div>
-                    <label>Mother's weight</label>
+                    </mat-expansion-panel>
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>Mother's weight</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
+                    
                     <div class="row">
                         
                         <div class="col-md-3">
@@ -215,7 +268,17 @@
                                 </mat-form-field>
                         </div>
                     </div>
-                    <label>Delivery Informations</label>
+                    </mat-expansion-panel>
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>Delivery Informations</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
+                   
                     <div class="row">
                         
                         <div class="col-md-2">
@@ -249,7 +312,16 @@
                                 </mat-form-field>
                         </div>
                     </div>
-                    <label>Oostpartum Visits</label>
+                    </mat-expansion-panel>
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>Oostpartum Visits</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
                     <div class="row">
                         
                         <div class="col-md-3">
@@ -295,6 +367,7 @@
                                 </mat-form-field>
                         </div>
                     </div>
+                    </mat-expansion-panel>
                     <input type="submit" value="Submit Mother details" class="btn btn-info pull-right">
                 </form>
                 <div *ngIf="success"><h5>You submitted a new baby record successfully</h5></div>
